# aisana

./: .gitignore  .replit  DEPLOYMENT.md  IMAGE_FEATURE_README.md  Procfile  README.md  admin.py  agents.py  analytics_engine.py  app.py  backup.sql  config.py  database.py  database_utils.py  debug_frontend.html  deployment_health_check.py  distributed_system.py  document_processor.py  feedback_api.py  feedback_system.py  gunicorn.conf.py  init_ml_router_patterns.py  intent_classifier.py  knowledge_search.py  language_detector.py  localization.py  main.py  mistral_client.py  ml_router.py  models.py  personalization_engine.py  prompt_engineering.py  pyproject.toml  replit.md  response_cache.py  semantic_search.py  setup_db.py  start_server.py  startup.py  test_agent_routing.py  (+8 more)
attached_assets/: Pasted--1--1754483639571_1754483639572.txt  Pasted-1--1754483018307_1754483018309.txt  Pasted-I-AI-Abitur-6--1755012826340_1755012826343.txt  Pasted-TemplateSyntaxError-jinja2-exceptions-TemplateSyntaxError-Encountered-unknown-tag-endblock-T-1755065762153_1755065762154.txt  Pasted-raceback-most-recent-call-last-File-home-runner-workspace-admin-py-line-173-in-dashboard--1754486953197_1754486953197.txt  Жатақхана сұрақтар (1)_1754482333174.docx  Путеводительден сұрақтар 30 (1)_1754482334825.docx
docs/: cicd-deployment-guide.md
static/css/: bolashak.png1  chat.css  modern-style.css  style.css
static/js/: bolashak-widget.js  i18n.js  localization.js  main.js  (+3 more)
templates/: about.html  base.html  base_new.html  chat_new.html  index_new.html
translations/: en.json  kz.json  ru.json
(+20 files in other folders)
